--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,18 @@
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
     <p>Seeing modifications BBBB</p>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <p>Testing MAIN</p>
+      <p>Testing MAIN</p>
+      <p>Testing MAIN</p>
+      <p>Testing MAIN</p>
+      <p>Testing MAIN</p>
     </main>
 
   </body>
