--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <div class="button-block">
+          <button class="nav-button">
+            <i class="far fa-edit"></i>
+            <span>Compose</span>
+          </button>
+      </div>
     </nav>
     <p>Seeing modifications BBBB</p>
 
